# sys_py_desktop_notify

./: .gitignore  DESKTOP_ALERTING_SPECIFICATION.md  LICENSE  README.md  config.toml  create_all_icons.sh  create_material_icons.py  debug_actions.py  demo.py  pyproject.toml
Documents/: API_Reference.md  Configuration_Guide.md  README.md
Documents/Examples/: interactive_actions.py
docs/: All_Or_Nothing_Icons.md  Config_Manager_API.md  Desktop_Notify_API.md  Dunst_Action_Behavior.md  Notification_Daemon_Comparison.md  README.md  Rofi_Theming.md  User_Guide.md
docs/Examples/: README.md
resources/rofi/: notification.rasi
scripts/: install_rofi_theme.sh
src/config_manager/: __init__.py  core.py  loaders.py  types.py  validators.py
src/desktop_notify/: __init__.py  api.py  cli.py  config.py  exceptions.py  logging_setup.py  types.py
src/desktop_notify/backends/: __init__.py  base.py  console.py  discovery.py  dunst.py
src/desktop_notify/iconsets/: __init__.py  base.py  complete_mappings.py  manager.py  material.py  material_complete.py  minimal.py  system.py
tests/: check_missing_icons.py  demo.py  example_interactive_actions.py  test_action_clicks.py
