[tool.poetry]
name = "desktop-notify"
version = "1.0.0"
description = "Unified desktop notification system for Linux with backend abstraction and rich icon support"
authors = ["Desktop Notify Team"]
readme = "README.md"
packages = [
    {include = "desktop_notify", from = "src"},
    {include = "config_manager", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"
py-notify = {path = "/home/gauol/Scratch/Projects - Code/py_nofify", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
ruff = "^0.1.0"
mypy = "^1.0.0"

[tool.poetry.scripts]
desktop-notify = "desktop_notify.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
skip-string-normalization = true
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "W", "B", "C", "I"]
ignore = ["E501"]  # Allow long lines for visual alignment

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=desktop_notify --cov=config_manager --cov-report=term-missing"