[tool.poetry]
name = "desktop-notify"
version = "1.0.0"
description = "Unified desktop notification system for Linux with backend abstraction and rich icon support"
authors = ["Desktop Notify Team"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/MeatPopcicle/sys_py_desktop_notify"
repository = "https://github.com/MeatPopcicle/sys_py_desktop_notify"
documentation = "https://github.com/MeatPopcicle/sys_py_desktop_notify/tree/main/docs"
keywords = [
    "notifications",
    "desktop",
    "linux",
    "dunst",
    "libnotify",
    "notification-daemon",
    "desktop-notifications",
    "toast",
    "alerts"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Desktop Environment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Notifications",
    "Typing :: Typed"
]
packages = [
    {include = "desktop_notify", from = "src"}
]
include = [
    "src/desktop_notify/iconsets/assets/**/*.svg"
]

[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"
pyyaml = "^6.0"
icon-mapper = {git = "git@github.com:MeatPopcicle/sys_py_icon-mapper.git", tag = "v1.1.0"}
py-config-manager = {git = "git@github.com:MeatPopcicle/sys_py_config_manager.git", tag = "v1.0.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
ruff = "^0.1.0"
mypy = "^1.0.0"

[tool.poetry.scripts]
desktop-notify = "desktop_notify.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
skip-string-normalization = true
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "W", "B", "C", "I"]
ignore = ["E501"]  # Allow long lines for visual alignment

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=desktop_notify --cov-report=term-missing"